Minor fixes
* Fix issue with new session page not showing flashes
* Remove orange outline when hovering submit button

--- a/flight-web-suite/assets/styles/application.css
+++ b/flight-web-suite/assets/styles/application.css
@@ -71,6 +71,6 @@ h2 {
 }
 
 .submit-button {
-  @apply w-full bg-alces-blue text-white py-1 mb-4 rounded-lg hover:bg-alces-blue-dark cursor-pointer;
+  @apply w-full bg-alces-blue text-white py-1 mb-4 rounded-lg hover:bg-alces-blue-dark cursor-pointer focus:bg-alces-blue-dark focus:outline-none focus-visible:outline-none;
 }
 
